fix bug with text wrapping on color chip

--- a/src/fabricator/styles/partials/_color-chips.scss
+++ b/src/fabricator/styles/partials/_color-chips.scss
@@ -1,6 +1,6 @@
 .f-color-chip {
 	padding: 1em;
-	width: 9em;
+	min-width: 9em;
 	border-top-width: 9em;
 	border-top-style: solid;
 	border-bottom-width: 0.5em;
